@@ -1,6 +1,12 @@
 package com.danielagapov.spawn.Services.User;
 
-import com.danielagapov.spawn.DTOs.*;
+import com.danielagapov.spawn.DTOs.FriendRequest.FriendRequestDTO;
+import com.danielagapov.spawn.DTOs.FriendRequest.FullFriendRequestDTO;
+import com.danielagapov.spawn.DTOs.FriendTag.FriendTagDTO;
+import com.danielagapov.spawn.DTOs.User.FullFriendUserDTO;
+import com.danielagapov.spawn.DTOs.User.FullUserDTO;
+import com.danielagapov.spawn.DTOs.User.RecommendedFriendUserDTO;
+import com.danielagapov.spawn.DTOs.User.UserDTO;
 import com.danielagapov.spawn.Enums.EntityType;
 import com.danielagapov.spawn.Enums.ParticipationStatus;
 import com.danielagapov.spawn.Exceptions.ApplicationException;
@@ -71,6 +77,7 @@ public class UserService implements IUserService {
 
     @Override
     public UserDTO getUserById(UUID id) {
+        logger.log("Getting user by id with id " + id);
         try {
             User user = repository.findById(id)
                     .orElseThrow(() -> new BaseNotFoundException(EntityType.User, id));
@@ -91,6 +98,7 @@ public class UserService implements IUserService {
     @Override
     public FullUserDTO getFullUserById(UUID id) {
         try {
+            logger.log("Getting full user by id for user with id " + id);
             return getFullUserByUser(getUserById(id), new HashSet<>());
         } catch (Exception e) {
             logger.log(e.getMessage());
@@ -100,15 +108,18 @@ public class UserService implements IUserService {
 
     @Override
     public List<UUID> getFriendUserIdsByUserId(UUID id) {
+        logger.log("Getting friend user ids for user with id " + id);
         try {
             // Fetch FriendTag entities related to the given user (for example, by userId)
             List<FriendTag> friendTags = friendTagRepository.findByOwnerId(id);
 
             // Retrieve the user IDs associated with those FriendTags
-            return friendTags.stream()
+            List<UUID> friendIds = friendTags.stream()
                     .flatMap(friendTag -> uftRepository.findFriendIdsByTagId(friendTag.getId()).stream())
                     .distinct() // Remove duplicates
-                    .collect(Collectors.toList());
+                    .toList();
+            logger.log("Found friend ids " + friendIds);
+            return friendIds;
         } catch (Exception e) {
             logger.log(e.getMessage());
             throw e;
@@ -130,8 +141,10 @@ public class UserService implements IUserService {
 
     @Override
     public Map<FriendTag, UUID> getOwnerUserIdsMap() {
+        logger.log("Getting owner user ids map");
         try {
-            List<FriendTag> friendTags = friendTagRepository.findAll();
+            List<FriendTag> friendTags = friendTagRepository.findAll(); // TODO: don't find by all
+            logger.log("Friend tags found: " + friendTags.size());
             return friendTags.stream()
                     .collect(Collectors.toMap(
                             friendTag -> friendTag,
@@ -145,6 +158,7 @@ public class UserService implements IUserService {
 
     @Override
     public Map<FriendTag, List<UUID>> getFriendUserIdsMap() {
+        logger.log("Getting friend user ids map");
         try {
             // Fetch all FriendTags
             List<FriendTag> friendTags = friendTagRepository.findAll();
@@ -195,13 +209,13 @@ public class UserService implements IUserService {
             userEntity = repository.save(userEntity);
 
             FriendTagDTO everyoneTagDTO = new FriendTagDTO(null, "Everyone",
-                    "#1D3D3D", userEntity.getId(), List.of(), true);
+                    "#8693FF", userEntity.getId(), List.of(), true);
             FriendTagDTO everyoneTagDTOAfterPersisting = friendTagService.saveFriendTag(everyoneTagDTO);
             // id is generated when saving
-            return UserMapper.toDTO(userEntity, List.of(), List.of(everyoneTagDTOAfterPersisting.id()));
+            return UserMapper.toDTO(userEntity, List.of(), List.of(everyoneTagDTOAfterPersisting.getId()));
         } catch (DataAccessException e) {
             logger.log(e.getMessage());
-            throw new BaseSaveException("Failed to save user: " + e.getMessage());
+            throw new BaseSaveException("Failed to save user: " + e.getMessage()); // TODO: fix throwing
         } catch (Exception e) {
             logger.log(e.getMessage());
             throw e;
@@ -216,10 +230,10 @@ public class UserService implements IUserService {
         // but for now, I left the logic the same as what Seabert wrote.
         try {
             return repository.findById(id).map(user -> {
-                user.setBio(newUser.bio());
-                user.setFirstName(newUser.firstName());
-                user.setLastName(newUser.lastName());
-                user.setUsername(newUser.username());
+                user.setBio(newUser.getBio());
+                user.setFirstName(newUser.getFirstName());
+                user.setLastName(newUser.getLastName());
+                user.setUsername(newUser.getUsername());
                 repository.save(user);
 
                 List<UUID> friendUserIds = getFriendUserIdsByUserId(user.getId());
@@ -266,7 +280,7 @@ public class UserService implements IUserService {
     public UserDTO saveUserWithProfilePicture(UserDTO user, byte[] profilePicture) {
         try {
             logger.log(String.format("Entering saveUserWithProfilePicture: {user: %s}", user));
-            if (user.profilePicture() == null) {
+            if (user.getProfilePicture() == null) {
                 logger.log("Profile picture is null, user either chose their profile picture or has default");
                 user = s3Service.putProfilePictureWithUser(profilePicture, user);
             }
@@ -310,7 +324,7 @@ public class UserService implements IUserService {
 
             // Extract the user IDs from the UserDTO list
             return friends.stream()
-                    .map(UserDTO::id)
+                    .map(UserDTO::getId)
                     .distinct()
                     .collect(Collectors.toList());
         } catch (Exception e) {
@@ -341,6 +355,7 @@ public class UserService implements IUserService {
 
     @Override
     public List<UserDTO> getFriendsByUserId(UUID userId) {
+        logger.log("Getting friends (user entities) by user id " + userId);
         try {
             // Get the FriendTags associated with the user (assuming userId represents the owner of friend tags)
             FriendTag everyoneTag = friendTagRepository.findEveryoneTagByOwnerId(userId);
@@ -353,7 +368,7 @@ public class UserService implements IUserService {
 
             // Filter out the friend whose ID matches the userId
             List<UserDTO> filteredFriends = friends.stream()
-                    .filter(friend -> !friend.id().equals(userId)) // Exclude the user themselves
+                    .filter(friend -> !friend.getId().equals(userId)) // Exclude the user themselves
                     .collect(Collectors.toList());
 
             return filteredFriends;
@@ -405,13 +420,13 @@ public class UserService implements IUserService {
             // Fetch users who have already received a friend request from the user
             List<UUID> sentFriendRequestReceiverUserIds = friendRequestService.getSentFriendRequestsByUserId(userId)
                     .stream()
-                    .map(FriendRequestDTO::receiverUserId)
+                    .map(FriendRequestDTO::getReceiverUserId)
                     .toList();
 
             // Map mutual friends to RecommendedFriendUserDTO
             List<UUID> receivedFriendRequestSenderUserIds = friendRequestService.getIncomingFriendRequestsByUserId(userId)
                     .stream()
-                    .map(request -> request.getSenderUser().id())
+                    .map(request -> request.getSenderUser().getId())
                     .toList();
 
             List<UUID> existingFriendUserIds = getFriendUserIdsByUserId(userId);
@@ -443,19 +458,19 @@ public class UserService implements IUserService {
                         FullUserDTO fullUser = getFullUserById(mutualFriendId);
 
                         return new RecommendedFriendUserDTO(
-                                fullUser.id(),
-                                fullUser.friends(),
-                                fullUser.username(),
-                                fullUser.profilePicture(),
-                                fullUser.firstName(),
-                                fullUser.lastName(),
-                                fullUser.bio(),
-                                fullUser.friendTags(),
-                                fullUser.email(),
+                                fullUser.getId(),
+                                fullUser.getFriends(),
+                                fullUser.getUsername(),
+                                fullUser.getProfilePicture(),
+                                fullUser.getFirstName(),
+                                fullUser.getLastName(),
+                                fullUser.getBio(),
+                                fullUser.getFriendTags(),
+                                fullUser.getEmail(),
                                 mutualFriendCount
                         );
                     })
-                    .sorted(Comparator.comparingInt(RecommendedFriendUserDTO::mutualFriendCount).reversed())
+                    .sorted(Comparator.comparingInt(RecommendedFriendUserDTO::getMutualFriendCount).reversed())
                     .limit(3)
                     .collect(Collectors.toList());
 
@@ -469,7 +484,7 @@ public class UserService implements IUserService {
             for (UserDTO potentialFriend : allUsers) {
                 if (recommendedFriends.size() >= 3) break;
 
-                UUID potentialFriendId = potentialFriend.id();
+                UUID potentialFriendId = potentialFriend.getId();
                 boolean isExcluded = excludedUserIds.contains(potentialFriendId);
 
                 if (!isExcluded) {
@@ -479,8 +494,8 @@ public class UserService implements IUserService {
                         List<FullFriendRequestDTO> potentialFriendIncomingFriendRequests = friendRequestService.getIncomingFriendRequestsByUserId(potentialFriendId);
 
                         for (FullFriendRequestDTO friendRequestDTO : potentialFriendIncomingFriendRequests) {
-                            if ((friendRequestDTO.getSenderUser().id().equals(userId) && friendRequestDTO.getReceiverUser().id().equals(potentialFriendId)) ||
-                                    (friendRequestDTO.getSenderUser().id().equals(potentialFriendId) && friendRequestDTO.getReceiverUser().id().equals(userId))) {
+                            if ((friendRequestDTO.getSenderUser().getId().equals(userId) && friendRequestDTO.getReceiverUser().getId().equals(potentialFriendId)) ||
+                                    (friendRequestDTO.getSenderUser().getId().equals(potentialFriendId) && friendRequestDTO.getReceiverUser().getId().equals(userId))) {
                                 hasAlreadySentFriendRequest = true;
                                 break;
                             }
@@ -496,15 +511,15 @@ public class UserService implements IUserService {
                         FullUserDTO fullUserDTO = getFullUserById(potentialFriendId);
 
                         recommendedFriends.add(new RecommendedFriendUserDTO(
-                                fullUserDTO.id(),
-                                fullUserDTO.friends(),
-                                fullUserDTO.username(),
-                                fullUserDTO.profilePicture(),
-                                fullUserDTO.firstName(),
-                                fullUserDTO.lastName(),
-                                fullUserDTO.bio(),
-                                fullUserDTO.friendTags(),
-                                fullUserDTO.email(),
+                                fullUserDTO.getId(),
+                                fullUserDTO.getFriends(),
+                                fullUserDTO.getUsername(),
+                                fullUserDTO.getProfilePicture(),
+                                fullUserDTO.getFirstName(),
+                                fullUserDTO.getLastName(),
+                                fullUserDTO.getBio(),
+                                fullUserDTO.getFriendTags(),
+                                fullUserDTO.getEmail(),
                                 0 // No mutual friends
                         ));
 
@@ -591,24 +606,26 @@ public class UserService implements IUserService {
         }
     }
 
+
     @Override
     public FullUserDTO getFullUserByUser(UserDTO user, Set<UUID> visitedUsers) {
+        logger.log("Getting full user by user: " + user.toString());
         try {
-            if (visitedUsers.contains(user.id())) {
+            if (visitedUsers.contains(user.getId())) {
                 return null; // Skip already visited users
             }
-            visitedUsers.add(user.id());
+            visitedUsers.add(user.getId());
 
             return new FullUserDTO(
-                    user.id(),
-                    convertUsersToFullUsers(getFriendsByUserId(user.id()), visitedUsers),
-                    user.username(),
-                    user.profilePicture(),
-                    user.firstName(),
-                    user.lastName(),
-                    user.bio(),
-                    friendTagService.convertFriendTagsToFullFriendTags(friendTagService.getFriendTagsByOwnerId(user.id())),
-                    user.email()
+                    user.getId(),
+                    convertUsersToFullUsers(getFriendsByUserId(user.getId()), visitedUsers),
+                    user.getUsername(),
+                    user.getProfilePicture(),
+                    user.getFirstName(),
+                    user.getLastName(),
+                    user.getBio(),
+                    friendTagService.convertFriendTagsToFullFriendTags(friendTagService.getFriendTagsByOwnerId(user.getId())),
+                    user.getEmail()
             );
         } catch (Exception e) {
             logger.log(e.getMessage());
@@ -618,6 +635,7 @@ public class UserService implements IUserService {
 
     @Override
     public List<FullUserDTO> convertUsersToFullUsers(List<UserDTO> users, Set<UUID> visitedUsers) {
+        logger.log("Converting users to full users: " + users.toString());
         try {
             return users.stream()
                     .map(user -> getFullUserByUser(user, visitedUsers))
@@ -627,6 +645,29 @@ public class UserService implements IUserService {
             logger.log(e.getMessage());
             throw e;
         }
+    }
+
+    @Override
+    public FullUserDTO getFullUserByUsername(String username) {
+        try {
+            logger.log("Getting full user for " + username);
+            User user = repository.findByUsername(username);
+            if (user == null) {
+                logger.log("Could not find user " + username);
+                throw new BaseNotFoundException(EntityType.User, username);
+            } else {
+                logger.log("Found user " + username);
+            }
+            return getFullUserById(user.getId());
+        } catch (Exception e) {
+            logger.log(e.getMessage());
+            throw e;
+        }
+    }
+
+    @Override
+    public boolean existsByUsername(String username) {
+        return repository.existsByUsername(username);
     }
 
     @Override
@@ -650,17 +691,17 @@ public class UserService implements IUserService {
             List<FullFriendUserDTO> fullFriendUserDTOList = new ArrayList<>();
             for (FullUserDTO user : fullUserFriends) {
                 FullFriendUserDTO fullFriendUserDTO = new FullFriendUserDTO(
-                        user.id(),
-                        user.friends(),
-                        user.username(),
-                        user.profilePicture(),
-                        user.firstName(),
-                        user.lastName(),
-                        user.bio(),
-                        user.friendTags(),
-                        user.email(),
+                        user.getId(),
+                        user.getFriends(),
+                        user.getUsername(),
+                        user.getProfilePicture(),
+                        user.getFirstName(),
+                        user.getLastName(),
+                        user.getBio(),
+                        user.getFriendTags(),
+                        user.getEmail(),
                         // only added property from `FullUserDTO`:
-                        friendTagService.getPertainingFriendTagsForFriend(requestingUserId, user.id())
+                        friendTagService.getPertainingFriendTagsForFriend(requestingUserId, user.getId())
                 );
                 fullFriendUserDTOList.add(fullFriendUserDTO);
             }
